# btautonomous

./: README.md
auto_behaviour/: CMakeLists.txt  package.xml  setup.py
auto_behaviour/python/behaviour/: condition.py  decorator.py  grasping.py  navigation.py  vision.py
auto_behaviour/scripts/: automate_behavior.py  moveit_automate.py
auto_behaviour/src/behaviour/: navigation.py
examples/: CMakeLists.txt  package.xml
examples/franka_robot/config/: world_locations.yaml
examples/franka_robot/launch/: franka.launch  test.launch
examples/franka_robot/rviz/: default.rviz
examples/kuka/launch/: kuka.launch
examples/kuka/urdf/: kr210.urdf.xacro
examples/scripts/: spawn_model.py  spawn_moveit_model.py
examples/turtlebot/launch/: turtlebot.launch
examples/turtlebot/maps/: block_location.yaml  maze1_map.pgm  maze1_map.yaml
examples/turtlebot/xml/: bt1.xml
examples/youbot/launch/: youbot.launch
examples/youbot/robots/: youbot-sensors.urdf.xacro  youbot.urdf.xacro  youbot_arm.urdf.xacro  youbot_base.urdf.xacro  youbot_dual_arm.urdf.xacro  youbot_gripper.urdf.xacro
examples/youbot/rviz/: config_file.rviz
examples/youbot/urdf/sensors/: asus_xtion_camera.urdf.xacro  hokuyo_urg04_laser.urdf.xacro  kinect_camera.urdf.xacro  microsoft_lifecam.urdf.xacro
examples/youbot/urdf/youbot_arm/: arm.urdf.xacro
examples/youbot/urdf/youbot_base/: base.urdf.xacro
examples/youbot/urdf/youbot_gripper/: gripper.urdf.xacro
examples/youbot/urdf/youbot_plate/: plate.urdf.xacro
usage/: install_realsense.md
